adds functional counter

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,12 @@
 <html>
     <head>
-        <title>Login Page</title>
+        <title>Words Counter</title>
         <!-- Latest compiled and minified CSS  -->
     </head>
     <body style="background-color: #f5f8fa;">
         <h1>Input Your Text Here</h1>
-        <form method="" action="counter">
+        <form method="POST" action="counter">
+            {% csrf_token %}
             <textarea name="text" rows="25" cols="100"></textarea>
             </br>
             <input type="submit"  value="Submit"/>
